<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/title"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/blockchain" />

        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_transaction_container"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        />

    <Button
        android:id="@+id/addBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_new_block"
        android:textColor="@color/colorLightFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/blockRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBlock"
        android:orientation="horizontal"
        android:padding="5dp"
        />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layout_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:background="@color/colorAccent"
        />


    <TextView
        android:id="@+id/totalBlocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/total_number_of_nodes"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blockRecycler" />

    <TextView
        android:id="@+id/latestBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/latest_block_hash"
        android:scrollHorizontally="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalBlocks" />


    <Button
        android:id="@+id/validateChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Validate Blockchain"
        android:textColor="@color/colorLightFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latestBlock" />


</androidx.constraintlayout.widget.ConstraintLayout>